k8s/vector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-worker
  namespace: perf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vector-worker
  template:
    metadata:
      labels:
        app: vector-worker
    spec:
      affinity:
        nodeAffinity: # place pods only on the specified instance type
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: eks.amazonaws.com/nodegroup
                operator: In
                values:
                - zo-locust
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - zinc
              topologyKey: topology.kubernetes.io/zone
      containers:
      - name: vector-worker
        image: timberio/vector:0.30.0-debian
        command: ["/bin/sh","-c"]
        args:
         - echo 'Hello world!' | vector -c /vector-config/vector.toml
        volumeMounts:
        - name: config
          mountPath: /vector-config 
      volumes:
      - name: config
        configMap:
          name: vector-config
