k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
    nginx.ingress.kubernetes.io/proxy-body-size: 15m
  name: locust.dev2.zinclabs.dev
  namespace: perf
spec:
  rules:
  - host: locust.dev2.zinclabs.dev
    http: 
      paths:
      - pathType: Prefix
        backend:
          service:
            name: locust-leader
            port:
              number: 8089
        path: /
  tls:
  - hosts:
    - locust.dev2.zinclabs.dev
    secretName: locust.dev2.zinclabs.dev
